# python-cache-postgresql-adapter

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
rndi/cache/adapters/postgresql/: __init__.py  adapter.py
tests/: conftest.py  test_adapter.py  test_provider.py
